kubernetes/k8s-backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-deployment
  namespace: vibecode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          image: saaandd/backstage:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7007
          
---
apiVersion: v1
kind: Service
metadata:
  name: backstage-service
  namespace: vibecode
spec:
  selector:
    app: backstage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7007
  type: ClusterIP
